2008-06-16  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-crawler.c: Bugfix, no longer freeing up 
	already freed GStrv

2008-06-16  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: (crawler_finalize): Make sure we
	clean up the async queue if we finalise the crawler and that means
	cleaning up the data on the queue too.

2008-06-16  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: Make all calls to GIO
	asynchronous. This has increased the speed of traversing the file
	system. Also we now only get the name and type of every file we
	traverse, this significantly improved performance. Debug
	statements are turned off now by default to improve performance.
	
	* src/trackerd/tracker-monitor.c: Debug statements are turned off
	now by default to improve performance.

2008-06-16  Ivan Frade  <ivan.frade@nokia.com>

	* configure.ac
	* tests/Makefile.am
	* tests/common/Makefile.am
	* tests/common/tracker-test-helpers.c
	* tests/common/tracker-test-helpers.h: New library with common
	code for all tests.
	
	* tests/libtracker-common/tracker-ontology-test.c
	* tests/libtracker-common/Makefile.am
	* tests/libtracker-common/tracker-type-utils-test.c: Added unit
	tests to tracker-type-utils.

	* src/libtracker-common/tracker-type-utils.c: Minor fixes to pass
	the tests.
	
2008-06-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* svn merge -r 1656:1683 ../xesam-support

2008-06-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-crawler.c: No more blocking of the mainloop

2008-06-13  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-common/tracker-dbus.c:
	Replaced g_warning with g_message. g_warning abort unit tests.
	
	* tests/libtracker-common/Makefile.am
	* tests/libtracker-common/non-utf8.txt
	* tests/libtracker-common/tracker-dbus-test.c: Unit tests to
	tracker-dbus helper methods, using non-utf8 strings.

2008-06-13  Martyn Russell  <martyn@imendio.com>
