@@ -1,3 +1,9 @@
+2008-06-17  Martyn Russell  <martyn@imendio.com>
+
+	* src/trackerd/tracker-crawler.c: (path_should_be_ignored): Do
+	UTF-8 validity check here instead of later on when we have wasted
+	more time processing files and folders.
+
 2008-06-16  Philip Van Hoof  <pvanhoof@gnome.org>
 
 	* src/trackerd/tracker-crawler.c: Bugfix, no longer freeing up 
